# mull

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES  clippy.toml
crates/codegen/mull-agent/: Cargo.toml  README.md
crates/codegen/mull-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/mull-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/mull-announcements/: Cargo.toml  generate.sh
crates/codegen/mull-announcements/src/: lib.rs
crates/codegen/mull-auth/: Cargo.toml
crates/codegen/mull-auth/src/: auth_provider.rs  lib.rs  visibility.rs
crates/codegen/mull-chat-state/: Cargo.toml
crates/codegen/mull-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/mull-config/: Cargo.toml
crates/codegen/mull-config-types/: Cargo.toml
crates/codegen/mull-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/mull-config/src/: lib.rs  loader.rs  macos_managed.rs  managed_cache.rs  paths.rs  shell.rs  signed_policy.rs  validation.rs
crates/codegen/mull-gix-status/: Cargo.toml
crates/codegen/mull-gix-status/src/: lib.rs
crates/codegen/mull-hooks/: Cargo.toml
crates/codegen/mull-hooks/examples/: README.md
crates/codegen/mull-hooks/src/: config.rs  discovery.rs  dispatcher.rs  env_expand.rs  lib.rs  matcher.rs  test_support.rs  trust.rs
crates/codegen/mull-hooks/tests/: integration.rs
crates/codegen/mull-http/: Cargo.toml
crates/codegen/mull-http/src/: lib.rs
crates/codegen/mull-mcp/: Cargo.toml
crates/codegen/mull-mcp/src/: acp_transport.rs  credentials.rs  lib.rs  mcp_http_client.rs  oauth.rs  servers.rs  wire.rs
crates/codegen/mull-mcp/tests/: repro_sse_flood.rs
crates/codegen/mull-memory/: Cargo.toml
crates/codegen/mull-memory/src/: backend.rs  chunker.rs  dream.rs  embedding.rs  index.rs  lib.rs  mmr.rs  schema.rs  search.rs  storage.rs  watcher.rs
crates/codegen/mull-mixpanel/: Cargo.toml
crates/codegen/mull-mixpanel/src/: lib.rs
crates/codegen/mull-models/: Cargo.toml  default_models.json
crates/codegen/mull-models/src/: lib.rs
crates/codegen/mull-pager-bin/: Cargo.toml  build.rs
crates/codegen/mull-pager-bin/src/: main.rs
crates/codegen/mull-pager-minimal/: Cargo.toml
crates/codegen/mull-pager-minimal/src/: auth.rs  commit.rs  full_view.rs  lib.rs  live.rs  overlay.rs  panel.rs  plan.rs  todo.rs  welcome.rs
crates/codegen/mull-plugin-marketplace/: Cargo.toml
crates/codegen/mull-plugin-marketplace/src/: catalog.rs  config.rs  git.rs  index.rs  install_resolve.rs  installer.rs  lib.rs  matcher.rs  scanner.rs  types.rs
crates/codegen/mull-prompt-queue/: Cargo.toml
crates/codegen/mull-prompt-queue/src/: lib.rs  types.rs
crates/codegen/mull-sampling-types/: Cargo.toml
crates/codegen/mull-sampling-types/src/: conversation.rs  doom_loop.rs  error.rs  lib.rs  types.rs
crates/codegen/mull-shell/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/mull-shell-base/: Cargo.toml
crates/codegen/mull-shell-base/src/: cpu_profile.rs  env.rs  lib.rs
crates/codegen/mull-shell-session-support/: Cargo.toml
crates/codegen/mull-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/mull-shell/benches/: session_list.rs
crates/codegen/mull-shell/changelogs/: 0.2.100.json  0.2.100.md  0.2.101.json  0.2.101.md  0.2.16.json  0.2.16.md  0.2.17.json  0.2.17.md  0.2.18.json  0.2.18.md  0.2.26.json  0.2.26.md  0.2.3.json  0.2.3.md  0.2.34.json  0.2.34.md  0.2.37.json  0.2.37.md  0.2.4.json  0.2.4.md  0.2.40.json  0.2.40.md  0.2.43.json  0.2.43.md  0.2.45.json  0.2.45.md  0.2.46.json  0.2.46.md  0.2.49.json  0.2.49.md  0.2.50.json  0.2.50.md  0.2.51.json  0.2.51.md  0.2.52.json  0.2.52.md  0.2.55.json  0.2.55.md  0.2.56.json  0.2.56.md  (+52 more)
crates/codegen/mull-shell/src/: active_sessions.rs  builtin.rs  bundle.rs  claude_import.rs  claude_import_state.rs  cli_models.rs  instrumentation.rs  lib.rs  managed_config.rs  mcp_doctor.rs  plugin.rs  tier.rs
crates/codegen/mull-shell/tests/: git_contention_e2e.rs  sandbox_requirements_pin.rs  session_load_perf.rs  team_managed_config.rs  test_active_sessions_smoke.rs  test_agent_type_invariant.rs  test_built_binary_e2e.rs  test_config_update_isolation.rs  test_debug_logging.rs  test_doom_loop_recovery.rs  test_doomloop_capture.rs  test_fork_session.rs  test_global_extra_headers_e2e.rs  test_heap_profile_monitor.rs  test_leader_death_repro.rs  test_leader_soak.rs  test_leader_stdio_integration.rs  test_leader_version_skew.rs  test_mcp_integration.rs  test_mcp_permission_persistence.rs  test_refusal_stop_reason.rs  test_sampling_client.rs  test_settings_refresh.rs  test_subagent_orphan_reconcile.rs  test_summary_reasoning_effort.rs  test_trusted_local_plugin_refresh_e2e.rs  test_vendor_compat.rs  test_xai_session_update.rs  trace_replay.rs
crates/codegen/mull-subagent-resolution/: Cargo.toml
crates/codegen/mull-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs  types.rs
crates/codegen/mull-tools/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/mull-tools-api/: Cargo.toml  build.rs
crates/codegen/mull-tools-api/proto/: mull-tools.proto
crates/codegen/mull-tools-api/src/: config_validation.rs  lib.rs  slash_commands.rs
crates/codegen/mull-tools-api/tests/: wire_shape.rs
crates/codegen/mull-tools/schema/: tool_meta.schema.json
crates/codegen/mull-tools/src/: attribution.rs  bridge.rs  gitignore.rs  lib.rs  normalization.rs  persistence.rs  tool_taxonomy.rs  versions.rs
crates/codegen/mull-workspace/: Cargo.toml
crates/codegen/mull-workspace-client/: Cargo.toml
crates/codegen/mull-workspace/src/: hub.rs  (+24 more)
crates/common/mull-computer-hub-core/: Cargo.toml
crates/common/mull-computer-hub-mcp-adapter/: Cargo.toml
crates/common/mull-tool-protocol/: Cargo.toml
crates/common/mull-tool-runtime/: Cargo.toml
(+1423 files in other folders)
