[package]
license = "Apache-2.0"
name = "mull-agent"
version = "0.1.0"
edition.workspace = true
description = "Agent builder, definition parsing, and system prompt assembly"

[dependencies]
dunce = { workspace = true }
mull-hooks = { path = "../mull-hooks" }
mull-sampling-types = { path = "../mull-sampling-types" }
mull-tools = { path = "../mull-tools" }
mull-token-estimation = { workspace = true }
minijinja = { version = "2", features = ["custom_syntax"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tracing = { workspace = true }
chrono = { workspace = true }
ignore = { workspace = true }
dirs = "6"
mull-config = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
zeroize = "1"
mull-tool-types.workspace = true

[features]
default = []
default-bazel = []

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
