[package]
license = "Apache-2.0"
edition.workspace = true
name = "mull-announcements"
version = "0.1.0"
description = "Shared announcement types, persistence, and formatting for Mull CLI apps"

[features]
# TS bindings generation only (mull-desktop consumes the committed output);
# off by default so Bazel/CI builds never compile ts-rs. See generate.sh.
ts = ["dep:ts-rs"]

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true }
mull-tools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
