[package]
license = "Apache-2.0"
name = "mull-chat-state"
version = "0.1.0"
edition.workspace = true
description = "Actor-based chat state management for Palmshed agents"

[features]
default-bazel = []

[dependencies]
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
mull-compaction = { path = "../../common/mull-compaction" }
mull-sampling-types = { path = "../mull-sampling-types" }
mull-token-estimation = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
