[package]
license = "Apache-2.0"
name = "mull-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the mull CLI, extracted from mull-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
mull-announcements = { workspace = true }
mull-config = { workspace = true }
mull-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
