[package]
license = "Apache-2.0"
name = "mull-config"
version = "0.1.0"
edition.workspace = true
description = "Shared config loading for Mull — mull_home, effective config (requirements > user > managed), TOML merge"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
dunce = { workspace = true }
# Shared signed deployment-config envelope contract with the cli-chat-proxy signer.
prod-mc-cli-chat-proxy-types = { path = "../../../prod/mc/cli-chat-proxy-types" }
ring = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = "3.1"
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
which = { workspace = true }
mull-tty-utils = { workspace = true }
mull-version = { workspace = true }

# core-foundation: read macOS MDM managed preferences (`io.palmshed.mull`) for the
# admin-deployed requirements layer.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]

[lints]
workspace = true