[package]
license = "Apache-2.0"
name = "mull-gix-status"
version = "0.1.0"
edition.workspace = true
description = "Shared gix status helpers: thread budget under RLIMIT_NPROC so produce-worker spawn cannot abort under panic=abort"

[dependencies]
gix = { workspace = true, features = ["status", "parallel"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mull-test-utils = { workspace = true }

[lints]
workspace = true
