[package]
license = "Apache-2.0"
name = "mull-http"
version = "0.1.0"
edition.workspace = true
description = "Shared reqwest HTTP clients and User-Agent construction for the mull CLI."

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
mull-auth = { workspace = true, features = ["middleware"] }
mull-sampler = { path = "../mull-sampler" }
mull-telemetry = { workspace = true }
mull-version = { workspace = true }
mull-workspace = { workspace = true }

[lints]
workspace = true
