[package]
license = "Apache-2.0"
name = "mull-shell-session-support"
version = "0.1.0"
edition.workspace = true
description = "Session-support modules for the mull shell crate family: managed MCP credential/catalog caching and file-access tracking."

[dependencies]
agent-client-protocol = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
mull-file-utils = { path = "../mull-file-utils", optional = true }
mull-http = { workspace = true }
mull-shell-base = { workspace = true }
mull-version = { workspace = true }
mull-workspace = { workspace = true }

[features]
default-bazel = []

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread"] }

[lints]
workspace = true
