[package]
license = "Apache-2.0"
name = "mull-subagent-resolution"
version = "0.1.0"
edition.workspace = true
description = "Subagent configuration resolution: merges persona, role, and spawn-time overrides into a resolved spec"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mull-sampling-types = { path = "../mull-sampling-types" }
mull-tools = { path = "../mull-tools" }
mull-tool-types.workspace = true
# TODO(phase2): add these when resolve_subagent_spec() composition is implemented:
# mull-agent = { path = "../mull-agent" }  # AgentDefinition lookup
# mull-fast-worktree = { path = "../mull-fast-worktree" }  # worktree creation

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
