[package]
license = "Apache-2.0"
name = "mull-tools-api"
version = "0.1.220-alpha.4"
edition.workspace = true
description = "Protobuf API definitions for Mull tools"

[dependencies]
tonic-prost = { workspace = true }
# Protobuf runtime
prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
mull-tool-protocol = { workspace = true }

[build-dependencies]
mull-proto-build = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde", "tonic"]

[lints]
workspace = true
