[package]
license = "Apache-2.0"
name = "mull-workspace-client"
version = "0.1.0"
edition.workspace = true
description = "Lightweight typed client for hub-proxied workspace.* RPCs (shared by mull-shell proxy mode and other consumers)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
mull-computer-hub-sdk = { workspace = true }
mull-workspace-types = { workspace = true }
mull-tool-protocol = { workspace = true }
mull-tool-runtime = { workspace = true }

[features]
default = []
default-bazel = []
[dev-dependencies]
schemars = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
mull-tool-types = { workspace = true }

[lints]
workspace = true
